stop sort button from jumping

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1277,6 +1277,7 @@ h1:before {
         color: #353434;
         margin-top: 4px;
         font-weight: 600;
+        width: 64px;
     }
     #btn-layout {
         position: absolute;
